--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 ﻿pandas>=2.3.3
 requests>=2.32.5
-fastapi>=0.115.0
+fastapi[standard]>=0.115.0
 uvicorn[standard]>=0.30.0
 sqlalchemy>=2.0.0
 pymysql>=1.1.0
 passlib[bcrypt]>=1.7.4
 bcrypt<4.1.0
 python-jose[cryptography]
+python-dotenv
